Increased default video quality on iOS

--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,13 @@ Thumbs.db
 *.DS_Store
 
 *.bak
-*.cache
 *.log
 *.swp
 *.user
 
 node_modules
 .history
+.idea
 
 
 
@@ -22,4 +22,3 @@ node_modules
 
 
 
- 
